add keyword search frontend

--- a/BlockedFrontend/templates/blocked-sites.html
+++ b/BlockedFrontend/templates/blocked-sites.html
@@ -30,6 +30,7 @@ A great many websites are being blocked mistakenly as a result of government imp
 
 <div><a href="{{ url_for('.random_category') }}">Browse a random category</a></div>
 <div><a href="/check">Check a specific website</a></div>
+<div><a href="{{ url_for('.sites_search') }}">Search sites by keyword</a></div>
 
 </div>
 </div> <!-- /.row -->
