--- a/BlockedFrontend/templates/cms/index.html
+++ b/BlockedFrontend/templates/cms/index.html
@@ -16,6 +16,7 @@
 <div><a href="{{ url_for('category.blocked_sites') }}">Browse blocked sites by category</a></div>
   <div><a href="{{ url_for('category.check') }}/live">Check if a site is being blocked</a></div>
   <div><a href="{{ url_for('category.check') }}">Get a site unblocked</a></div>
+<div><a href="{{ url_for('category.sites_search') }}">Search sites by keyword</a></div>
   <div><a href="{{ url_for('category.random') }}">Take action: Report sites</a></div>
 
 {% endblock %}
