move paging to component library

--- a/BlockedFrontend/templates/blocked-sites.html
+++ b/BlockedFrontend/templates/blocked-sites.html
@@ -47,12 +47,7 @@ A great many websites are being blocked mistakenly as a result of government imp
 
 {{ results.results_table(data) }}
 
-<div id="paging">
-{% if page > 0 %}
-<a href="{{ url_for('.blocked_sites', category=category, page=page-1) }}" class="btn btn-primary" id="prevpage"><span class="glyphicon glyphicon-backward"></span> Previous Page</a>
-{% endif %}
-<a href="{{ url_for('.blocked_sites', category=category, page=page+1) }}" class="btn btn-primary" id="nextpage">Next Page <span class="glyphicon glyphicon-forward"></span></a>
-<div>
+{{ results.paging('.blocked_sites', page=page, pagesize=20, count=data.total_blocked_url_count, category=category) }}
 
 
 </div>
