--- a/BlockedFrontend/templates/chunks.part.html
+++ b/BlockedFrontend/templates/chunks.part.html
@@ -49,7 +49,28 @@
 
 <p>Share the Blocked project on social media and help raise awareness of censorship</p>
 
-_twitter_ _facebook_
+	<div class="connect">
+			<a href="https://www.facebook.com/openrightsgroup">
+				<img src="https://www.openrightsgroup.org/assets/site/org/images/social_facebook.png" alt="" title="" width="30" height="29"></a>
+			<a href="https://twitter.com/openrightsgroup">
+				<img src="https://www.openrightsgroup.org/assets/site/org/images/social_twitter.png" alt="" title="" width="30" height="29"></a>
+			<a href="https://plus.google.com/u/0/116543318055985390327/posts">
+				<img src="https://www.openrightsgroup.org/assets/site/org/images/social_googleplus.png" alt="" title="" width="30" height="29"></a>
+			<a href="https://www.flickr.com/photos/tags/openrightsgroup/">
+				<img src="https://www.openrightsgroup.org/assets/site/org/images/social_share.png" alt="" title="" width="30" height="29"></a>
+			<a href="https://www.youtube.com/openrightsgroup">
+				<img src="https://www.openrightsgroup.org/assets/site/org/images/social_youtube.png" alt="" title="" width="30" height="29"></a>
+			<a href="https://www.linkedin.com/groups/Open-Rights-Group-133233">
+				<img src="https://www.openrightsgroup.org/assets/site/org/images/social_linkedin.png" alt="" title="" width="30" height="29"></a>
+			<a href="https://www.meetup.com/ORG-London/">
+				<img src="https://www.openrightsgroup.org/assets/site/org/images/social_red.png" alt="" title="" width="30" height="29"></a>
+			<a href="https://www.openrightsgroup.org/feed/">
+				<img src="https://www.openrightsgroup.org/assets/site/org/images/social_rss.png" alt="" title="" width="30" height="29"></a>
+			<a href="https://soundcloud.com/openrightsgroup">
+				<img src="https://www.openrightsgroup.org/assets/site/org/images/social_cloud.png" alt="" title="" width="30" height="29"></a>
+			<a href="https://openrightsgroup.tumblr.com">
+				<img src="https://www.openrightsgroup.org/assets/site/org/images/social_tumblr.png" alt="" title="Tumblr" width="30" height="29"></a>
+		</div>
 
 </div>
 
