--- a/BlockedFrontend/templates/unblock.html
+++ b/BlockedFrontend/templates/unblock.html
@@ -11,19 +11,19 @@
 <div class="row">
 <div class="col-md-7">
 
-<form action="/unblock2" method="POST" class="form">
+<form action="/unblock2?url={{url}}" method="POST" class="form">
 <input type="hidden" name="url" value="{{url}}" />
 <h2>Your details</h2>
 <div class="form-group">
   <label for="name">Name</label>
   <div class="control-group">
-    <input  type="text" placeholder="" name="name" id="name" class="form-control" />
+    <input  type="text" placeholder="" name="name" id="name" class="form-control" value="{{name|default('')}}" />
   </div>
 </div>
 <div class="form-group">
   <label for="email">Email address</label>
   <div class="control-group">
-    <input  type="text" placeholder="" name="email" id="email" class="form-control" />
+    <input  type="text" placeholder="" name="email" id="email" class="form-control" value="{{email|default('')}}"/>
   </div>
 </div>
 
