--- a/BlockedFrontend/templates/site.html
+++ b/BlockedFrontend/templates/site.html
@@ -4,6 +4,9 @@
 {%set pagerole = "Site blocking report" %}
 
 {%block banner_text%}
+{% if thanks|default(False) %}
+{{ g.remote_chunks.unblockThanks | safe }}
+{% endif %}
 {%endblock%}
 
 {%block page_menu%}
