--- a/BlockedFrontend/static/theme.css
+++ b/BlockedFrontend/static/theme.css
@@ -226,3 +226,9 @@ input.form-control, textarea.form-control, input[type=checkbox] {
 .results-table th:first-child {
     width: 40%;
 }
+
+.permalink {
+    border: 1px solid #111111;
+    font-family: mono;
+    background-color: lightgray;
+}
