--- a/BlockedFrontend/templates/results.part.html
+++ b/BlockedFrontend/templates/results.part.html
@@ -3,7 +3,7 @@
 <table class="table table-hover" id="results">
 {% for item in data.sites %}
 <tr>
-  <td><h4>{{item.title}}</h4><div>{{item.url}}</div></td>
+  <td><h4>{{item.title|null('(no title)')}}</h4><div>{{item.url}}</div></td>
   <td class="reveal">
     <a href="{{item.url}}" rel="nofollow" target="_blank">Visit Site</a>
     <a href="{{ url_for('.site', url=item.url) }}">View site report</a>
