--- a/BlockedFrontend/templates/BasicPage.page.html
+++ b/BlockedFrontend/templates/BasicPage.page.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="/static/theme.css?cb=1" />
   </head>
   <body>
+    <!-- ADMIN MODE: {{ g.admin }} -->
     <div class="container">
 
     <div class="row menurow">
