--- a/BlockedFrontend/templates/site-search.html
+++ b/BlockedFrontend/templates/site-search.html
@@ -42,6 +42,7 @@ A great many websites are being blocked mistakenly as a result of government imp
 
 </div>
 <div class="col-md-3" style="text-align: right">
+    {% if g.admin %}
     <div class="dropdown">
         <a class="btn btn-default dropdown-toggle" data-toggle="dropdown">Save list<span class="caret"></span></a>
         <ul class="dropdown-menu">
@@ -63,6 +64,7 @@ A great many websites are being blocked mistakenly as a result of government imp
             </li>
         </ul>
     </div>
+    {% endif %}
 
 </div><!-- /.col -->
 </div> <!-- /.row -->
