--- a/BlockedFrontend/templates/cms/legal-blocks.html
+++ b/BlockedFrontend/templates/cms/legal-blocks.html
@@ -26,6 +26,13 @@
         <th>Network</th>
         <th>Date</th>
     </tr>
+    {% for row in blocks %}
+    <tr>
+        <td>{{ row.url }}</td>
+        <td>{{ row.network_name }}</td>
+        <td>{{ row.first_blocked | fmtime }}</td>
+    </tr>
+    {% endfor %}
 </table>
 
 </div>
