--- a/BlockedFrontend/static/theme.css
+++ b/BlockedFrontend/static/theme.css
@@ -230,7 +230,8 @@ input.form-control, textarea.form-control, input[type=checkbox] {
 .permalink {
     border: 1px solid #111111;
     font-family: mono;
-    background-color: lightgray;
+    background-color: #efeeee;
+    padding: 4px;
 }
 
 td.num {
