--- a/BlockedFrontend/templates/check.html
+++ b/BlockedFrontend/templates/check.html
@@ -15,7 +15,7 @@
   <label for="url">Website address</label>
   <div class="control-group">
     <div class="input-group">
-    <input type="text" placeholder="http://" name="url" id="url" class="form-control" />
+    <input type="text" style="width: 36em" placeholder="http://" name="url" id="url" class="form-control" />
     <span class="input-group-btn">
     <input type="submit" value="Check site" class="btn btn-primary" />
     </span>
