--- a/BlockedFrontend/templates/show_list.html
+++ b/BlockedFrontend/templates/show_list.html
@@ -28,9 +28,17 @@
 </div>
 
 <div class="row sitelistrow">
-    <div class="col-md-12">
+    <div class="col-md-9">
 
 <h3>{{ itemcount }} {{ "entry" if itemcount == 1 else "entries" }}</h3>
+    </div>
+    <div class="col-md-3">
+        <a href="{{ url_for('.export_list', name=savedlist.name) }}" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-save"></span> Export</a>
+    </div>
+</div>
+
+<div class="row sitelistrow">
+    <div class="col-md-12">
 
 <table class="table">
     <tr>
