change logo, size, add clicable link.  Closes openrightsgroup/blocked-org-uk#118

--- a/BlockedFrontend/templates/BasicPage.page.html
+++ b/BlockedFrontend/templates/BasicPage.page.html
@@ -26,10 +26,10 @@
     <div class="container">
 
     <div class="row menurow">
-    <div class="col-md-3">
-      <img src="https://www.blocked.org.uk/assets/site/blocked/img/blocked-logo.png" alt="Blocked logo" />
+    <div class="col-md-5">
+        <a href="/" title="Return to homepage"><img width="100%" src="https://www.blocked.org.uk/assets/site/blocked/img/blocked-logo.svg" alt="Blocked logo" /></a>
     </div>
-    <div class="col-md-9 menu">
+    <div class="col-md-7 menu">
       {{ chunks.main_menu() }}
     </div>
     </div>
