change permalink to an input with a clipboard copy button openrightsgroup/blocked-org-uk#115

--- a/BlockedFrontend/templates/site.html
+++ b/BlockedFrontend/templates/site.html
@@ -47,6 +47,11 @@
     $('#unblockbtn').attr('disabled','disabled');
     StreamResults('{{url}}');
 {% endif %}
+    $('#copybtn').click(function(){
+      $('#permalink').select();
+      document.execCommand('copy');
+
+    });
   });
 {% endblock %}
 
@@ -141,23 +146,35 @@
 </div>
 
 <div class="row">
-<div class="col-md-5">
-<h4>Tell us about this site</h4>
-<p>For example: is the link dead, or is the domain being squatted?
-<a href="{{ url_for('unblock.feedback', url=url) }}">Please let us know</a>
-</p>
-</div>
-</div>
 
-<div class="row ">
-    <div class="col-md-12">
-<h3>Share this result</h3>
-<div class="permalink">{{config.SITE_URL}}{{ url_for('.site', url=url) }}</div>
-    </div>
-</div>
+  <div class="col-md-6">
+    <h4>Tell us about this site</h4>
+    <p>For example: is the link dead, or is the domain being squatted?
+      <div><a href="{{ url_for('unblock.feedback', url=url) }}">Please let us know</a></div>
+    </p>
+  </div>
+
+  <div class="col-md-6">
+    <h4>Share this result</h4>
+    <form class="form-horizontal">
+      <div class="form-group">
+        <div class="col-sm-12">
+          <div class="input-group">
+            <input class="form-control" type="text" id="permalink" name="permalink" value="{{ config.SITE_URL }}{{  url_for('.site', url=url)  }}">
+            <span class="input-group-btn">
+              <button title="Copy this permalink to the clipboard" id="copybtn" class="btn btn-default" type="button"><span class="glyphicon glyphicon-copy"></span></button>
+            </span>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+
+</div> <!-- /.row -->
 
 <div class="row shaded-row">
 {{chunks.contactChunk() }}
 </div>
 
 {% endblock %}
+
