--- a/BlockedFrontend/templates/site.html
+++ b/BlockedFrontend/templates/site.html
@@ -155,7 +155,7 @@
   </div>
 
   <div class="col-md-6">
-    <h4>Share this result</h4>
+    <h4>Link to this result</h4>
     <form class="form-horizontal">
       <div class="form-group">
         <div class="col-sm-12">
